Categorizing data according to (video or PDF) and re-showing it in RecyclerView #3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
     <string name="vertical_image">Image PDF</string>
     <string name="all_buttonDownload">Download</string>
+    <string name="hyperone_logo">HyperOne logo</string>
 </resources>
