Fixed download method, improved layout, and configured to use Room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="vertical_image">Image PDF</string>
     <string name="all_buttonDownload">Download</string>
     <string name="hyperone_logo">HyperOne logo</string>
+    <string name="textMySourceTitle">My source</string>
+    <string name="all_done">Done</string>
 </resources>
